# an-application

./: CMakeLists.txt  CMakeLists.txt.in  README.md  README.md.in  bootstrap.cmake
all/: CMakeLists.txt
app/: CMakeLists.txt
app/src/: main.cc
examples/: new.cmake
include/app/: app.h
main/: CMakeLists.txt.in
main/src/: main.cc.in
src/: version.cc.in
tests/: CMakeLists.txt  CMakeLists.txt.in
tooling/: ConfigureEverything.cmake
